<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/bottom_videos_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_videos" />

        <item
            android:id="@+id/nav_audios"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/title_music" />

        <item
            android:visible="false"
            android:id="@+id/nav_download"
            android:icon="@drawable/download"
            android:title="@string/action_download" />
        <item
            android:id="@+id/nav_duplicate_directory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_duplicate_directory"
            android:visible="false"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting"
            android:visible="false"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools"
            android:visible="false"/>
    </group>

    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/baseline_help_black_18dp"
                android:title="@string/menu_faq"
                android:visible="false"/>

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_play"
                android:title="@string/menu_aboute_us"
                android:visible="true"/>
        </menu>
    </item>

</menu>
